styled everything except for dropdown menu

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>T-Shirts</title>
   <link rel="stylesheet" href="/app.css">
-</head>
+</head2>
 
 <body>
   <div class="section">
