made the dropdown

--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,10 @@
                   <span class="size">XL</span>
 
                   <ul class="dropdown__list">
-                    <li><span class="size">S</span></li>
-                    <li><span class="size">M</span></li>
-                    <li><span class="size">L</span></li>
-                    <li><span class="size">XL</span></li>
+                    <li class="dropdown__button"><span class="size">S</span></li>
+                    <li class="dropdown__button"><span class="size">M</span></li>
+                    <li class="dropdown__button"><span class="size">L</span></li>
+                    <li class="dropdown__button"><span class="size">XL</span></li>
                   </ul>
                 </button>
                 <button class="button-bar__button">
@@ -91,10 +91,10 @@
                   <span class="size">XL</span>
 
                   <ul class="dropdown__list">
-                    <li><span class="size">S</span></li>
-                    <li><span class="size">M</span></li>
-                    <li><span class="size">L</span></li>
-                    <li><span class="size">XL</span></li>
+                    <li class="dropdown__button"><span class="size">S</span></li>
+                    <li class="dropdown__button"><span class="size">M</span></li>
+                    <li class="dropdown__button"><span class="size">L</span></li>
+                    <li class="dropdown__button"><span class="size">XL</span></li>
                   </ul>
                 </button>
                 <button class="button-bar__button">
@@ -138,10 +138,10 @@
                   <span class="size">XL</span>
 
                   <ul class="dropdown__list">
-                    <li><span class="size">S</span></li>
-                    <li><span class="size">M</span></li>
-                    <li><span class="size">L</span></li>
-                    <li><span class="size">XL</span></li>
+                    <li class="dropdown__button"><span class="size">S</span></li>
+                    <li class="dropdown__button"><span class="size">M</span></li>
+                    <li class="dropdown__button"><span class="size">L</span></li>
+                    <li class="dropdown__button"><span class="size">XL</span></li>
                   </ul>
                 </button>
                 <button class="button-bar__button">
@@ -185,10 +185,10 @@
                   <span class="size">XL</span>
 
                   <ul class="dropdown__list">
-                    <li><span class="size">S</span></li>
-                    <li><span class="size">M</span></li>
-                    <li><span class="size">L</span></li>
-                    <li><span class="size">XL</span></li>
+                    <li class="dropdown__button"><span class="size">S</span></li>
+                    <li class="dropdown__button"><span class="size">M</span></li>
+                    <li class="dropdown__button"><span class="size">L</span></li>
+                    <li class="dropdown__button"><span class="size">XL</span></li>
                   </ul>
                 </button>
                 <button class="button-bar__button">
@@ -232,10 +232,10 @@
                   <span class="size">XL</span>
 
                   <ul class="dropdown__list">
-                    <li><span class="size">S</span></li>
-                    <li><span class="size">M</span></li>
-                    <li><span class="size">L</span></li>
-                    <li><span class="size">XL</span></li>
+                    <li class="dropdown__button"><span class="size">S</span></li>
+                    <li class="dropdown__button"><span class="size">M</span></li>
+                    <li class="dropdown__button"><span class="size">L</span></li>
+                    <li class="dropdown__button"><span class="size">XL</span></li>
                   </ul>
                 </button>
                 <button class="button-bar__button">
@@ -279,10 +279,10 @@
                   <span class="size">XL</span>
 
                   <ul class="dropdown__list">
-                    <li><span class="size">S</span></li>
-                    <li><span class="size">M</span></li>
-                    <li><span class="size">L</span></li>
-                    <li><span class="size">XL</span></li>
+                    <li class="dropdown__button"><span class="size">S</span></li>
+                    <li class="dropdown__button"><span class="size">M</span></li>
+                    <li class="dropdown__button"><span class="size">L</span></li>
+                    <li class="dropdown__button"><span class="size">XL</span></li>
                   </ul>
                 </button>
                 <button class="button-bar__button">
